--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,11 +16,15 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username:
-    password:
+    username: myprojecttest995@gmail.com
+    password: 1q2w3e4r!@
     properties:
-    mail.smtp.auth: true
-    mail.smtp.starttls.enable: true
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
 
 logging:
   level:
