--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
+      # ddl-auto: validate
       ddl-auto: create
     properties:
       hibernate:
