--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,8 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
-<<<<<<< HEAD
-             ddl-auto: validate
-=======
-       ddl-auto: validate
->>>>>>> 92340efb077d430eafd5db9e35fa4c111bf0f4b6
-#      ddl-auto: create
+#             ddl-auto: validate
+      ddl-auto: create
     properties:
       hibernate:
         event:
